Fixed table css not showing up after generating schedule.

--- a/main.css
+++ b/main.css
@@ -10,3 +10,14 @@
     width:20%;
   }
 }
+
+table {
+  width: 100%;
+  margin-bottom: 1rem;
+  vertical-align: top;
+}
+
+table, th, td {
+  border: 1px solid black !important;
+  padding: 10px !important;
+}
